--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
 asgiref==3.8.1
-Django
+Django==5.1.1
 django-environ==0.11.2
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-gis==1.1
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
 gis==0.2.1
+inflection==0.5.1
 Markdown==3.7
 osgeo4w_installer==1.4.0
+packaging==24.1
 pillow==10.4.0
 postgres==4.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 psycopg2-pool==1.2
 PyJWT==2.9.0
+pytz==2024.2
+PyYAML==6.0.2
+setuptools==75.1.0
 sqlparse==0.5.1
 tzdata==2024.2
+uritemplate==4.1.1
